--- a/src/Components/Exercise7/styles.css
+++ b/src/Components/Exercise7/styles.css
@@ -61,20 +61,25 @@ h1 {
 .user-card {
     border: 1px solid #000;
     border-radius: 4px;
-    /* width: 20%;
-    max-width: 20%; */
-    /* margin-right: 16px;
-    margin-bottom: 16px; */
     background-color: #3377ff;
     color: #fff;
 }
 
 .user-card p:first-child {
-    font-size: 18px;
+    font-size: 24px;
     font-weight: 500;
     margin-bottom: 0;
 }
 
 .user-card p:last-child {
-    font-size: 14px;
+    font-size: 20px;
+}
+
+.user-card button {
+    cursor: pointer;
+    font-size: 12px;
+    border: 1px solid #000;
+    background-color: #fff;
+    padding: 8px 16px;
+    margin-bottom: 16px;
 }
