--- a/src/Components/Exercise8To10/styles.css
+++ b/src/Components/Exercise8To10/styles.css
@@ -7,7 +7,7 @@ body {
     border: 1px solid #000;
     width: 350px;
     background-color: #fff;
-    margin: 10% auto;
+    margin: 5% auto;
     padding: 8px;
 }
 
@@ -75,11 +75,12 @@ h1 {
     font-size: 20px;
 }
 
-.user-card button {
+.user-card .button {
     cursor: pointer;
     font-size: 12px;
     border: 1px solid #000;
     background-color: #fff;
     padding: 8px 16px;
     margin-bottom: 16px;
+    margin-right: 16px;
 }
