--- a/src/Components/Exercise11/styles.css
+++ b/src/Components/Exercise11/styles.css
@@ -1,5 +1,4 @@
 .pokedex {
-    background-color: #ccc;
     padding-top: 16px;
 }
 
@@ -30,16 +29,20 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     column-gap: 20px;
-    row-gap: 20px;
     width: 70%;
     margin: 0 auto;
-    padding: 5%;
+    padding: 16px 5%;
     background-color: #fff;
+    height: 85vh;
+    overflow: auto;
 }
 
 .poke-card {
+    display: flex;
+    flex-flow: column;
     border: 1px solid #000;
     padding: 12px;
+    margin-bottom: 16px;
 }
 
 .poke-card .name {
@@ -57,3 +60,14 @@
     padding: 0;
     margin: 0;
 }
+
+@media only screen and (max-width: 1000px) {
+    /* For tablets: */
+    .poke-list {
+        grid-template-columns: repeat(3, 1fr);
+        width: 80%;
+    }
+    .filters-container {
+        width: 90%;
+    }
+  }
